# libretto

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: audit.toml  config.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml
crates/libretto-archive/: Cargo.toml  README.md
crates/libretto-archive/src/: lib.rs
crates/libretto-audit/: Cargo.toml  README.md
crates/libretto-audit/benches/: advisory_bench.rs  integrity_bench.rs
crates/libretto-audit/examples/: audit_laravel.rs
crates/libretto-audit/src/: advisory.rs  audit_log.rs  credentials.rs  integrity.rs  lib.rs  permissions.rs  platform.rs  secure.rs  signature.rs
crates/libretto-autoloader/: Cargo.toml  README.md
crates/libretto-autoloader/benches/: autoloader_bench.rs
crates/libretto-autoloader/src/: lib.rs  parser.rs  scanner.rs
crates/libretto-bench/: Cargo.toml
crates/libretto-bench/benches/: autoloader_generation.rs  cache_operations.rs  dependency_resolution.rs  lockfile_operations.rs  memory_benchmarks.rs  package_operations.rs  realworld_scenarios.rs  simd_benchmarks.rs  vcs_operations.rs
crates/libretto-bench/src/: composer_runner.rs  fixtures.rs  generators.rs  lib.rs
crates/libretto-cache/: Cargo.toml  README.md
crates/libretto-cache/benches/: cache_bench.rs
crates/libretto-cache/src/: bloom.rs  compression.rs  config.rs  index.rs  l1.rs  l2.rs  lib.rs  simd.rs  tiered.rs
crates/libretto-cli/: Cargo.toml  README.md
crates/libretto-cli/resources/: ClassLoader.php.template  composer-stubs.php
crates/libretto-cli/src/: cas_cache.rs  context.rs  fetcher.rs  installer_paths.rs  main.rs  platform.rs  scripts.rs
crates/libretto-cli/src/commands/: about.rs  archive.rs  audit.rs  browse.rs  bump.rs  cache.rs  cache_clear.rs  check_platform_reqs.rs  completion.rs  config.rs  create_project.rs  depends.rs  diagnose.rs  dump_autoload.rs  exec.rs  fund.rs  global.rs  init.rs  install.rs  licenses.rs  lock_generator.rs  mod.rs  outdated.rs  prohibits.rs  reinstall.rs  remove.rs  repository.rs  require.rs  run_script.rs  search.rs  self_update.rs  show.rs  status.rs  suggests.rs  update.rs  validate.rs
crates/libretto-cli/src/output/: colors.rs  json.rs  live.rs  mod.rs  progress.rs  prompt.rs  style.rs  table.rs
crates/libretto-config/: Cargo.toml  README.md
crates/libretto-config/src/: auth.rs  cache.rs  env.rs  error.rs  lib.rs  loader.rs  types.rs  validate.rs
crates/libretto-core/: Cargo.toml  README.md
crates/libretto-core/benches/: json_bench.rs
crates/libretto-core/src/: error.rs  hash.rs  json.rs  lib.rs  package.rs  version.rs
crates/libretto-downloader/: Cargo.toml  README.md
crates/libretto-downloader/benches/: download_bench.rs
crates/libretto-downloader/src/: checksum.rs  client.rs  config.rs  error.rs  extract.rs  lib.rs  parallel.rs  progress.rs  retry.rs  source.rs  stream.rs  throttle.rs
crates/libretto-lockfile/: Cargo.toml  README.md
crates/libretto-lockfile/benches/: lockfile.rs
crates/libretto-lockfile/src/: atomic.rs  diff.rs  error.rs  generator.rs  hash.rs  lib.rs  migration.rs  types.rs  validation.rs
crates/libretto-platform/: Cargo.toml  README.md
crates/libretto-platform/benches/: platform_bench.rs
crates/libretto-platform/src/: cpu.rs  error.rs  fs.rs  io.rs  lib.rs  permissions.rs  process.rs  shell.rs  signal.rs  simd.rs  temp.rs  tls.rs
crates/libretto-plugin-system/: Cargo.toml  README.md
crates/libretto-plugin-system/benches/: plugin_bench.rs
crates/libretto-plugin-system/src/: api.rs  config.rs  discovery.rs  error.rs  event_bus.rs  hooks.rs  lib.rs  lifecycle.rs  native.rs  php.rs  sandbox.rs
crates/libretto-repository/: Cargo.toml  README.md
crates/libretto-repository/benches/: repository.rs
crates/libretto-repository/src/: cache.rs  client.rs  error.rs  lib.rs  manager.rs  types.rs
crates/libretto-repository/src/packagist/: client.rs  mod.rs  types.rs
crates/libretto-repository/src/providers/: bitbucket.rs  github.rs  gitlab.rs  mod.rs
crates/libretto-resolver/: Cargo.toml  README.md
crates/libretto-resolver/benches/: resolver_bench.rs
crates/libretto-resolver/src/: composer.rs  fast.rs  fetcher.rs  index.rs  lib.rs  package.rs  provider.rs  pubgrub.rs  remote.rs  resolver.rs  transitive.rs  turbo.rs  types.rs  version.rs
crates/libretto-vcs/: Cargo.toml  README.md
crates/libretto-vcs/src/: cache.rs  credentials.rs  error.rs  fossil.rs  git.rs  hg.rs  lib.rs  manager.rs  parallel.rs  svn.rs  types.rs  url.rs
test-laravel/: benchmark.sh  composer.json
test-large-app/: composer.json
tests/bench/laravel/: composer.json
