[package]
name = "libretto-audit"
description = "Security auditing for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
libretto-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
