[package]
name = "libretto-autoloader"
description = "PHP autoloader generation for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
libretto-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
