[package]
name = "libretto-platform"
description = "Platform detection and OS-specific utilities for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
libretto-core = { workspace = true }
directories = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
