[package]
name = "libretto-plugin-system"
description = "Plugin system for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
libretto-core = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
